# opengl_simple_scene

./: .gitignore  CMakeLists.txt  README.md  cg.code-workspace
basic_exercises/: gradient_triangle.cpp  just_vertices_triangle.cpp  pyramid_rotation.cpp  pyramid_with_projection_matrix.cpp  rotation_without_projection.cpp  scaling_without_projection.cpp  translate_animation.cpp  triangle_basic_shader.cpp  uniform_variable_animation.cpp
dependencies/glfw/3.3.9/: INSTALL_RECEIPT.json
dependencies/osx/glew/2.2.0_1/: INSTALL_RECEIPT.json
dependencies/osx/glfw/3.3.9/lib/pkgconfig/: glfw3.pc
include/: Camera.h  DirectionalLight.h  MainWindow.h  MaterialLibrary.h  Mesh.h  MeshObject.h  MeshRenderer.h  Model.h  NormalsVisualizer.h  ShaderLibrary.h  ShaderLine.h  ShaderMesh.h  SpotLight.h  Texture.h  TextureLibrary.h  Transform.h
include/Scenes/: SampleScene.h
resources/models/SeaHawk/Textures/.mayaSwatches/: TEX_CCON.jpg_hcm.swatch  TEX_DASH.jpg_hcm.swatch  TEX_OBC.jpg_hcm.swatch  TEX_OSCL.jpg_hcm.swatch  TEX_OSCR.jpg_hcm.swatch  TEX_OSSP.jpg_hcm.swatch  TEX_OTC.jpg_hcm.swatch
resources/shaders/: shader.vert
src/: AverageNormalsCalculator.cpp  Camera.cpp  DirectionalLight.cpp  Light.cpp  Line  Line.cpp  LineShader.cpp  MainWindow.cpp  Material.cpp  MaterialLibrary.cpp  Mesh.cpp  MeshObject.cpp  MeshRenderer.cpp  MeshShader  MeshShader.cpp  Model.cpp  NormalsVisualizer.cpp  Object.cpp  PointLight.cpp  Shader.cpp  ShaderLibrary.cpp  ShaderLine.cpp  ShaderMesh.cpp  SpotLight.cpp  Texture.cpp  TextureLibrary  TextureLibrary.cpp  Transform.cpp  main  main.cpp  main.h
src/Line.dSYM/Contents/Resources/DWARF/: Line
src/Line.dSYM/Contents/Resources/Relocations/x86_64/: Line.yml
src/MeshShader.dSYM/Contents/: Info.plist
src/MeshShader.dSYM/Contents/Resources/DWARF/: MeshShader
src/MeshShader.dSYM/Contents/Resources/Relocations/x86_64/: MeshShader.yml
src/Scenes/: SampleScene.cpp
src/Shaders/: line_shader.frag  line_shader.vert  shader.frag  shader.vert
src/TextureLibrary.dSYM/Contents/: Info.plist
src/TextureLibrary.dSYM/Contents/Resources/DWARF/: TextureLibrary
src/TextureLibrary.dSYM/Contents/Resources/Relocations/x86_64/: TextureLibrary.yml
src/headers/: AverageNormalsCalculator.cpp  AverageNormalsCalculator.h  Camera.h  DirectionalLight.h  Light.h  Line.h  LineShader.h  Material.h  MaterialLibrary.h  Mesh.h  MeshObject.h  MeshShader.h  NormalsVisualizer.h  Object.h  PointLight.h  Shader.h  ShaderLibrary.h  ShaderMesh.h  SpotLight.h  Texture.h  TextureLibrary.h  Transform.h  stb_image.h
src/headers/Scenes/: SampleScene.h
src/main.dSYM/Contents/Resources/DWARF/: main
src/main.dSYM/Contents/Resources/Relocations/x86_64/: main.yml
